--- a/package.json
+++ b/package.json
@@ -93,6 +93,7 @@
         "prettier": "^2.6.2",
         "superagent": "^8.1.2",
         "typescript": "^4.4.2",
+        "vite-plugin-checker": "^0.6.4",
         "vitest": "^1.6.0"
     }
 }
