--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
     "name": "ambient-ts-app",
-    "version": "2.5.20",
+    "version": "2.6.0",
     "private": true,
     "type": "module",
     "dependencies": {
-        "@crocswap-libs/sdk": "^0.3.9-3",
+        "@crocswap-libs/sdk": "file:../sdk",
         "@d3fc/d3fc-extent": "^4.0.2",
         "@emotion/babel-plugin": "^11.11.0",
         "@emotion/is-prop-valid": "^1.2.1",
@@ -13,14 +13,14 @@
         "@material-ui/core": "^4.12.4",
         "@mui/material": "^5.8.2",
         "@types/react-color": "^3.0.7",
-        "@vitejs/plugin-react": "^4.2.1",
-        "@web3modal/ethers5": "4.1.11",
+        "@vitejs/plugin-react": "^4.3.0",
+        "@web3modal/ethers": "^4.2.3",
         "alea": "^1.0.1",
         "babel-plugin-styled-components": "^2.1.4",
         "d3": "^7.4.4",
         "d3fc": "^15.2.4",
         "emoji-picker-react": "^3.6.2",
-        "ethers": "5.7.2",
+        "ethers": "^6.13.0",
         "framer-motion": "4.1.17",
         "i18next": "^21.8.16",
         "i18next-browser-languagedetector": "^8.0.0",
@@ -30,9 +30,9 @@
         "moment": "^2.29.4",
         "numbro": "^2.5.0",
         "re-resizable": "^6.6.11",
-        "react": "^18.1.0",
+        "react": "^18.3.1",
         "react-color": "^2.19.3",
-        "react-dom": "^18.1.0",
+        "react-dom": "^18.3.1",
         "react-i18next": "^12.3.1",
         "react-icons": "^4.3.1",
         "react-idle-timer": "^5.7.2",
@@ -45,9 +45,12 @@
         "simplex-noise": "^4.0.1",
         "socket.io-client": "^4.5.1",
         "styled-components": "6.0.3",
-        "vite": "^5.2.11",
+        "vite": "^5.2.12",
         "vite-plugin-babel-macros": "^1.0.6",
         "web-vitals": "^2.1.0"
+    },
+    "resolutions": {
+        "@coinbase/wallet-sdk": "npm:@coinbase/wallet-sdk@4.0.3"
     },
     "scripts": {
         "start": "yarn install && vite",
