--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "private": true,
     "type": "module",
     "dependencies": {
-        "@crocswap-libs/sdk": "^0.3.9-3",
+        "@crocswap-libs/sdk": "^0.3.10",
         "@d3fc/d3fc-extent": "^4.0.2",
         "@emotion/babel-plugin": "^11.11.0",
         "@emotion/is-prop-valid": "^1.2.1",
