add yarn dev command

--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
         "start": "yarn install && vite",
         "start-only": "vite",
         "build": "tsc && vite build",
+        "dev": "vite --host",
         "test": "vitest",
         "lint": "eslint \"src/**/*.{js,jsx,ts,tsx}\"",
         "lint:fix": "eslint --fix \"src/**/*.{js,jsx,ts,tsx}\"",
