--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
         "@coinbase/wallet-sdk": "npm:@coinbase/wallet-sdk@4.0.3"
     },
     "scripts": {
+        "ambi": "yarn start --force",
         "start": "yarn install && vite",
         "start-only": "vite",
         "build": "tsc && vite build",
