--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     },
     "scripts": {
         "ambi": "yarn start --force",
+        "plume": "yarn start --force --mode plume --port 3001",
         "start": "yarn install && vite",
         "start-only": "vite",
         "build": "tsc && vite build",
