--- a/package.json
+++ b/package.json
@@ -65,8 +65,7 @@
         "lint": "eslint \"src/**/*.{js,jsx,ts,tsx}\"",
         "lint:fix": "eslint --fix \"src/**/*.{js,jsx,ts,tsx}\"",
         "format": "prettier --write 'src/**/*.{js,jsx,ts,tsx,css,md,json}' --config ./.prettierrc",
-        "pre-commit": "yarn lint:fix && yarn format && yarn test:nowatch",
-        "prepare": "husky install"
+        "pre-commit": "yarn lint:fix && yarn format && yarn test:nowatch"
     },
     "lint-staged": {
         "*.{js,jsx,ts,tsx}": [
