--- a/netlify.toml
+++ b/netlify.toml
@@ -5,6 +5,11 @@
   status = 200
 
 [[headers]]
+  for = "/assets/*"
+  [headers.values]
+    Cache-Control = "public, max-age=31536000, immutable"
+
+[[headers]]
   for = "/ambient-token-list.json" 
   [headers.values]
     Access-Control-Allow-Origin = "*"
@@ -18,6 +23,7 @@
   for = "/scroll-badge/*"
     [headers.values]
     Access-Control-Allow-Origin = "*"
+    Cache-Control = "public, max-age=31536000, immutable"
 
 [[edge_functions]]
   path = "/*"
