--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "ambient-ts-app",
-    "version": "2.8.10",
+    "version": "2.8.10-1",
     "private": true,
     "type": "module",
     "dependencies": {
