add FUTA favicon

--- a/.env
+++ b/.env
@@ -3,6 +3,10 @@ VITE_META_KEYWORDS=""
 VITE_OG_TITLE=""
 VITE_OG_DESCRIPTION=""
 VITE_OG_URL=""
-VITE_SITE_TITLE=""
+VITE_SITE_TITLE=Ambient
 VITE_OG_IMAGE=""
 VITE_TWITTER_SITE=""
+VITE_FAVICON_16_16=/favicon-16x16.png
+VITE_FAVICON_32_32=/favicon-32x32.png
+VITE_APPLE_TOUCH_ICON=/apple-touch-icon.png
+VITE_SAFARI_PINNED_TAB=/safari-pinned-tab.svg
