--- a/.env.futa
+++ b/.env.futa
@@ -9,3 +9,7 @@ VITE_OG_URL="https://futa.finance"
 VITE_SITE_TITLE="FUTA Finance" 
 VITE_OG_IMAGE=""
 VITE_TWITTER_SITE=""
+VITE_FAVICON_16_16="/futa-favicon-16x16.png"
+VITE_FAVICON_32_32="/futa-favicon-32x32.png"
+VITE_APPLE_TOUCH_ICON=""
+VITE_SAFARI_PINNED_TAB=""
