--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
         "modern-screenshot": "^4.4.25",
         "moment": "^2.30.1",
         "numbro": "^2.5.0",
-        "p5": "^1.9.4",
+        "p5": "^1.11.0",
         "p5.j5": "^1.2.0",
         "re-resizable": "^6.6.11",
         "react": "^18.3.1",
@@ -54,7 +54,8 @@
         "web-vitals": "^2.1.0"
     },
     "resolutions": {
-        "@coinbase/wallet-sdk": "npm:@coinbase/wallet-sdk@4.0.3"
+        "@coinbase/wallet-sdk": "npm:@coinbase/wallet-sdk@4.0.3",
+        "path-to-regexp": "3.3.0"
     },
     "scripts": {
         "ambi": "yarn start --force",
