--- a/package.json
+++ b/package.json
@@ -1,106 +1,108 @@
 {
-    "name": "ambient-ts-app",
-    "version": "2.10.9",
-    "private": true,
-    "type": "module",
-    "dependencies": {
-        "@crocswap-libs/sdk": "^1.0.12",
-        "@d3fc/d3fc-extent": "^4.0.2",
-        "@emotion/react": "^11.10.5",
-        "@emotion/styled": "^11.10.5",
-        "@material-ui/core": "^4.12.4",
-        "@mui/material": "^5.8.2",
-        "@web3modal/ethers": "4.2.1",
-        "babel-plugin-styled-components": "^2.1.4",
-        "d3": "^7.4.4",
-        "d3fc": "^15.2.4",
-        "emoji-picker-react": "^4.11.1",
-        "ethers": "^6.13.3",
-        "framer-motion": "4.1.17",
-        "i18next": "^23.16.5",
-        "i18next-browser-languagedetector": "^8.0.0",
-        "intro.js": "^7.0.0",
-        "intro.js-react": "^1.0.0",
-        "modern-screenshot": "^4.4.25",
-        "moment": "^2.30.1",
-        "numbro": "^2.5.0",
-        "p5": "^1.11.0",
-        "re-resizable": "^6.10.0",
-        "react": "^18.3.1",
-        "react-blockies": "^1.4.1",
-        "react-color": "^2.19.3",
-        "react-dom": "^18.3.1",
-        "react-i18next": "^12.3.1",
-        "react-icons": "^5.3.0",
-        "react-idle-timer": "^5.7.2",
-        "react-jazzicon": "^1.0.4",
-        "react-lottie-player": "^2.1.0",
-        "react-reveal": "^1.2.2",
-        "react-router-dom": "^6.27.0",
-        "react-transition-group": "^4.4.2",
-        "react-use-websocket": "^4.8.1",
-        "styled-components": "6.0.3",
-        "web-vitals": "^2.1.0"
-    },
-    "resolutions": {
-        "@coinbase/wallet-sdk": "npm:@coinbase/wallet-sdk@4.0.3"
-    },
-    "scripts": {
-        "ambi": "yarn start --force",
-        "start": "yarn install && vite",
-        "start-only": "vite",
-        "force": "yarn start --force",
-        "futa": "yarn start --force --mode futa --port 3001",
-        "plume": "yarn start --force --mode plume --port 3001",
-        "build": "tsc && vite build",
-        "preview": "vite preview",
-        "dev": "vite --host",
-        "test": "vitest",
-        "lint": "eslint \"src/**/*.{js,jsx,ts,tsx}\"",
-        "lint:fix": "eslint --fix \"src/**/*.{js,jsx,ts,tsx}\"",
-        "format": "prettier --write 'src/**/*.{js,jsx,ts,tsx,css,md,json}' --config ./.prettierrc",
-        "pre-commit": "yarn lint:fix && yarn format && yarn test:nowatch"
-    },
-    "lint-staged": {
-        "*.{js,jsx,ts,tsx}": [
-            "prettier --write --config ./.prettierrc",
-            "eslint --fix"
-        ]
-    },
-    "browserslist": [
-        ">0.2%",
-        "not dead",
-        "not op_mini all"
-    ],
-    "devDependencies": {
-        "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
-        "@emotion/is-prop-valid": "^1.3.1",
-        "@testing-library/react": "^13.2.0",
-        "@testing-library/user-event": "^14.5.2",
-        "@types/adm-zip": "^0.5.4",
-        "@types/d3": "^7.1.0",
-        "@types/p5": "^1.7.6",
-        "@types/react-blockies": "^1.4.4",
-        "@types/react-color": "^3.0.12",
-        "@typescript-eslint/eslint-plugin": "^5.22.0",
-        "@typescript-eslint/parser": "^7.1.0",
-        "@vitejs/plugin-react": "^4.3.3",
-        "adm-zip": "^0.5.10",
-        "eslint": "^7.32.0",
-        "eslint-config-prettier": "^9.1.0",
-        "eslint-import-resolver-typescript": "^2.7.1",
-        "eslint-plugin-import": "^2.26.0",
-        "eslint-plugin-prettier": "^4.0.0",
-        "eslint-plugin-react": "^7.35.0",
-        "eslint-plugin-react-hooks": "^4.6.2",
-        "lint-staged": "^15.2.8",
-        "playwright": "^1.45.3",
-        "prettier": "^3.3.3",
-        "superagent": "^10.0.0",
-        "typescript": "^4.4.2",
-        "vite": "^5.4.9",
-        "vite-plugin-babel-macros": "^1.0.6",
-        "vite-plugin-checker": "^0.8.0",
-        "vitest": "^1.6.0"
-    }
+  "name": "ambient-ts-app",
+  "version": "2.10.9",
+  "private": true,
+  "type": "module",
+  "dependencies": {
+    "@crocswap-libs/sdk": "^1.0.12",
+    "@d3fc/d3fc-extent": "^4.0.2",
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "@material-ui/core": "^4.12.4",
+    "@mui/material": "^5.8.2",
+    "@web3modal/ethers": "4.2.1",
+    "babel-plugin-styled-components": "^2.1.4",
+    "d3": "^7.4.4",
+    "d3fc": "^15.2.4",
+    "emoji-picker-react": "^4.11.1",
+    "ethers": "^6.13.3",
+    "framer-motion": "4.1.17",
+    "i18next": "^23.16.5",
+    "i18next-browser-languagedetector": "^8.0.0",
+    "intro.js": "^7.0.0",
+    "intro.js-react": "^1.0.0",
+    "modern-screenshot": "^4.4.25",
+    "moment": "^2.30.1",
+    "numbro": "^2.5.0",
+    "p5": "^1.11.0",
+    "re-resizable": "^6.10.0",
+    "react": "^18.3.1",
+    "react-blockies": "^1.4.1",
+    "react-color": "^2.19.3",
+    "react-dom": "^18.3.1",
+    "react-i18next": "^12.3.1",
+    "react-icons": "^5.3.0",
+    "react-idle-timer": "^5.7.2",
+    "react-jazzicon": "^1.0.4",
+    "react-lottie-player": "^2.1.0",
+    "react-reveal": "^1.2.2",
+    "react-router-dom": "^6.27.0",
+    "react-transition-group": "^4.4.2",
+    "react-use-websocket": "^4.8.1",
+    "styled-components": "6.0.3",
+    "web-vitals": "^2.1.0"
+  },
+  "resolutions": {
+    "@coinbase/wallet-sdk": "npm:@coinbase/wallet-sdk@4.0.3"
+  },
+  "scripts": {
+    "ambi": "yarn start --force",
+    "start": "yarn install && vite",
+    "start-only": "vite",
+    "force": "yarn start --force",
+    "futa": "yarn start --force --mode futa --port 3001",
+    "plume": "yarn start --force --mode plume --port 3001",
+    "build": "tsc && vite build",
+    "preview": "vite preview",
+    "dev": "vite --host",
+    "test": "vitest",
+    "lint": "eslint \"src/**/*.{js,jsx,ts,tsx}\"",
+    "lint:fix": "eslint --fix \"src/**/*.{js,jsx,ts,tsx}\"",
+    "format": "prettier --write 'src/**/*.{js,jsx,ts,tsx,css,md,json}' --config ./.prettierrc",
+    "pre-commit": "yarn lint:fix && yarn format && yarn test:nowatch",
+    "prepare": "husky"
+  },
+  "lint-staged": {
+    "*.{js,jsx,ts,tsx}": [
+      "prettier --write --config ./.prettierrc",
+      "eslint --fix"
+    ]
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not op_mini all"
+  ],
+  "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@emotion/is-prop-valid": "^1.3.1",
+    "@testing-library/react": "^13.2.0",
+    "@testing-library/user-event": "^14.5.2",
+    "@types/adm-zip": "^0.5.4",
+    "@types/d3": "^7.1.0",
+    "@types/p5": "^1.7.6",
+    "@types/react-blockies": "^1.4.4",
+    "@types/react-color": "^3.0.12",
+    "@typescript-eslint/eslint-plugin": "^5.22.0",
+    "@typescript-eslint/parser": "^7.1.0",
+    "@vitejs/plugin-react": "^4.3.3",
+    "adm-zip": "^0.5.10",
+    "eslint": "^7.32.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-import-resolver-typescript": "^2.7.1",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-react": "^7.35.0",
+    "eslint-plugin-react-hooks": "^4.6.2",
+    "husky": "^9.1.7",
+    "lint-staged": "^15.2.10",
+    "playwright": "^1.45.3",
+    "prettier": "^3.3.3",
+    "superagent": "^10.0.0",
+    "typescript": "^4.4.2",
+    "vite": "^5.4.9",
+    "vite-plugin-babel-macros": "^1.0.6",
+    "vite-plugin-checker": "^0.8.0",
+    "vitest": "^1.6.0"
+  }
 }
