--- a/netlify.toml
+++ b/netlify.toml
@@ -15,6 +15,11 @@
     Access-Control-Allow-Origin = "*"
 
 [[headers]]
+  for = "/testnet-token-list.json" 
+  [headers.values]
+    Access-Control-Allow-Origin = "*"
+
+[[headers]]
   for = "/rings_192.png"
   [headers.values]
     Access-Control-Allow-Origin = "*"
@@ -39,6 +44,5 @@ package = "@netlify/plugin-sitemap"
   buildDir = "."
 
 [build]
-  command = "npm run build && cp src/ambient-utils/constants/ambient-token-list.json build/"
+  command = "npm run build && cp src/ambient-utils/constants/ambient-token-list.json src/ambient-utils/constants/testnet-token-list.json build/"
   publish = "build"
-
