--- a/package.json
+++ b/package.json
@@ -95,6 +95,7 @@
         "lint-staged": "^15.2.10",
         "playwright": "^1.45.3",
         "prettier": "^3.3.3",
+        "rollup-plugin-visualizer": "^5.12.0",
         "superagent": "^10.0.0",
         "typescript": "^4.4.2",
         "vite": "^6.0.2",
